<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_margin="5sp"/>

        <Button
            android:id="@+id/butCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_margin="5sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="@string/teamhomefield" />

                    <EditText
                        android:id="@+id/TeamHome"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="@string/teamguestfield" />

                    <EditText
                        android:id="@+id/TeamGuest"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text">

                        <requestFocus />
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="@string/goalshomefield" />

                    <EditText
                        android:id="@+id/GoalsHome"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="@string/goalsguestfield" />

                    <EditText
                        android:id="@+id/GoalsGuest"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>